cmake_minimum_required(VERSION 3.21)
project(DesignPattern)

set(CMAKE_CXX_STANDARD 14)

add_executable(AbstractFactory 创建型模式/抽象工厂/AbstractFactory.cpp)
add_executable(Builder 创建型模式/建造者/Builder.cpp)
add_executable(Factory 创建型模式/工厂方法/Factory.cpp)
add_executable(Prototype 创建型模式/原型/Prototype.cpp)
add_executable(Singleton 创建型模式/单例/Singleton.cpp)
add_executable(Adapter 结构型模式/适配器/Adapter.cpp)
add_executable(Bridge 结构型模式/桥接/Bridge.cpp)
add_executable(Composite 结构型模式/组合/Composite.cpp)
add_executable(Decorator 结构型模式/装饰/Decorator.cpp)
add_executable(Facade 结构型模式/外观/Facade.cpp)
add_executable(Flyweight 结构型模式/享元/Flyweight.cpp)
add_executable(Proxy 结构型模式/代理/Proxy.cpp)
add_executable(ChainOfResponsibility 行为模式/责任链/ChainOfResponsibility.cpp)
add_executable(Iterator 行为模式/迭代器/Iterator.cpp)
add_executable(Memento 行为模式/备忘录/Memento.cpp)
add_executable(State 行为模式/状态/State.cpp)
add_executable(Template 行为模式/模板/Template.cpp)
add_executable(Command 行为模式/命令/Command.cpp)
add_executable(Mediator 行为模式/中介者/Mediator.cpp)
add_executable(Observer 行为模式/观察者/Observer.cpp)
add_executable(Strategy 行为模式/策略/Strategy.cpp)
add_executable(Visitor 行为模式/访问者/Visitor.cpp)
